--- a/_modules/python2verilog/optimizer/optimizer.html
+++ b/_modules/python2verilog/optimizer/optimizer.html
@@ -46,7 +46,7 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Returns whether or not expr is dependent on var</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">):</span>
+    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">InputVar</span><span class="p">):</span>
         <span class="k">return</span> <span class="n">var</span> <span class="o">==</span> <span class="n">expr</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span>
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">BinOp</span><span class="p">):</span>
         <span class="k">return</span> <span class="n">is_dependent</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">left</span><span class="p">,</span> <span class="n">var</span><span class="p">)</span> <span class="ow">or</span> <span class="n">is_dependent</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">right</span><span class="p">,</span> <span class="n">var</span><span class="p">)</span>
@@ -60,11 +60,11 @@
 <span class="sd">    Replaces instances of variables with the mapped value</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">expr</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">expr</span><span class="p">)</span>
-    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">):</span>
+    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">InputVar</span><span class="p">):</span>
         <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">mapping</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">key</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span> <span class="o">==</span> <span class="n">expr</span><span class="o">.</span><span class="n">to_string</span><span class="p">():</span>
                 <span class="k">return</span> <span class="n">mapping</span><span class="p">[</span><span class="n">key</span><span class="p">]</span>
-    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Int</span><span class="p">):</span>
+    <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="p">(</span><span class="n">ir</span><span class="o">.</span><span class="n">UInt</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Int</span><span class="p">)):</span>
         <span class="k">return</span> <span class="n">expr</span>
     <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="p">(</span><span class="n">ir</span><span class="o">.</span><span class="n">BinOp</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UBinOp</span><span class="p">)):</span>
         <span class="n">expr</span><span class="o">.</span><span class="n">left</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">left</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
@@ -76,7 +76,7 @@
     <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UnaryOp</span><span class="p">):</span>
         <span class="n">expr</span><span class="o">.</span><span class="n">expr</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">expr</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
-        <span class="k">raise</span> <span class="ne">TypeError</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="n">expr</span><span class="p">))</span>
+        <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;TODO: use the State class </span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">expr</span><span class="p">)</span><span class="si">}</span><span class="s2"> </span><span class="si">{</span><span class="n">expr</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">expr</span></div>
 
 
@@ -91,7 +91,6 @@
     <span class="k">except</span> <span class="ne">RecursionError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">RecursionError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">node</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span> <span class="kn">from</span> <span class="nn">e</span>
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">AssignNode</span><span class="p">):</span>
-        <span class="c1"># if is_dependent(node.rvalue, str(node.lvalue)):</span>
         <span class="n">node</span><span class="o">.</span><span class="n">rvalue</span> <span class="o">=</span> <span class="n">backwards_replace</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">rvalue</span><span class="p">,</span> <span class="n">mapping</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Cannot do backwards replace on </span><span class="si">{</span><span class="n">node</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
