--- a/_modules/python2verilog/backend/verilog/codegen.html
+++ b/_modules/python2verilog/backend/verilog/codegen.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" data-content_root="../../../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>python2verilog.backend.verilog.codegen &#8212; python2verilog  documentation</title>
     <link rel="stylesheet" type="text/css" href="../../../../_static/pygments.css?v=4f649999" />
     <link rel="stylesheet" type="text/css" href="../../../../_static/alabaster.css?v=039e1c02" />
-    <script data-url_root="../../../../" id="documentation_options" src="../../../../_static/documentation_options.js?v=b3ba4146"></script>
+    <script src="../../../../_static/documentation_options.js?v=5929fcd5"></script>
     <script src="../../../../_static/doctools.js?v=888ff710"></script>
-    <script src="../../../../_static/sphinx_highlight.js?v=4825356b"></script>
+    <script src="../../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../../../genindex.html" />
     <link rel="search" title="Search" href="../../../../search.html" />
    
@@ -43,7 +43,9 @@
 <span class="kn">from</span> <span class="nn">...utils.assertions</span> <span class="kn">import</span> <span class="n">assert_type</span><span class="p">,</span> <span class="n">assert_list_type</span><span class="p">,</span> <span class="n">assert_dict_type</span>
 
 
-<div class="viewcode-block" id="CodeGen"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen">[docs]</a><span class="k">class</span> <span class="nc">CodeGen</span><span class="p">:</span>
+<div class="viewcode-block" id="CodeGen">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen">[docs]</a>
+<span class="k">class</span> <span class="nc">CodeGen</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Code Generator for Verilog</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -63,7 +65,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">add_state_weak</span><span class="p">(</span><span class="n">context</span><span class="o">.</span><span class="n">ready_state</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">add_global_var</span><span class="p">(</span>
-            <span class="n">ir</span><span class="o">.</span><span class="n">InputVar</span><span class="p">(</span><span class="s2">&quot;state&quot;</span><span class="p">,</span> <span class="n">initial_value</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">ready_state</span><span class="p">)</span>
+            <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">(</span><span class="s2">&quot;state&quot;</span><span class="p">,</span> <span class="n">initial_value</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">ready_state</span><span class="p">)</span>
         <span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">_module</span> <span class="o">=</span> <span class="n">CodeGen</span><span class="o">.</span><span class="n">__new_module</span><span class="p">(</span><span class="n">root_case</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="p">)</span>
@@ -151,7 +153,7 @@
         <span class="n">init_body</span> <span class="o">=</span> <span class="p">[]</span>
 
         <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span> <span class="n">root</span><span class="o">.</span><span class="n">case_items</span><span class="p">:</span>
-            <span class="k">if</span> <span class="n">item</span><span class="o">.</span><span class="n">condition</span> <span class="o">==</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">(</span><span class="n">context</span><span class="o">.</span><span class="n">entry</span><span class="p">):</span>
+            <span class="k">if</span> <span class="n">item</span><span class="o">.</span><span class="n">condition</span> <span class="o">==</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">(</span><span class="n">context</span><span class="o">.</span><span class="n">entry_state</span><span class="p">):</span>
                 <span class="n">stmt_stack</span> <span class="o">+=</span> <span class="n">item</span><span class="o">.</span><span class="n">statements</span>
                 <span class="n">init_body</span> <span class="o">+=</span> <span class="n">item</span><span class="o">.</span><span class="n">statements</span>
                 <span class="n">root</span><span class="o">.</span><span class="n">case_items</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">item</span><span class="p">)</span>
@@ -190,19 +192,27 @@
         <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_module</span><span class="p">,</span> <span class="n">ver</span><span class="o">.</span><span class="n">Module</span><span class="p">)</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_module</span>
 
-<div class="viewcode-block" id="CodeGen.get_module_lines"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">[docs]</a>    <span class="k">def</span> <span class="nf">get_module_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="CodeGen.get_module_lines">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_module_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Get Verilog module as Lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">module</span><span class="o">.</span><span class="n">to_lines</span><span class="p">()</span></div>
 
-<div class="viewcode-block" id="CodeGen.get_module_str"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_str">[docs]</a>    <span class="k">def</span> <span class="nf">get_module_str</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="CodeGen.get_module_str">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_str">[docs]</a>
+    <span class="k">def</span> <span class="nf">get_module_str</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Get Verilog module as string</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">get_module_lines</span><span class="p">())</span></div>
 
-<div class="viewcode-block" id="CodeGen.new_testbench"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench">[docs]</a>    <span class="k">def</span> <span class="nf">new_testbench</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
+
+<div class="viewcode-block" id="CodeGen.new_testbench">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench">[docs]</a>
+    <span class="k">def</span> <span class="nf">new_testbench</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Creates testbench with multiple test cases</span>
 
@@ -311,20 +321,30 @@
             <span class="k">return</span> <span class="n">module</span>
         <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="s2">&quot;Needs the context&quot;</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="CodeGen.new_testbench_lines"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_lines">[docs]</a>    <span class="k">def</span> <span class="nf">new_testbench_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
+
+<div class="viewcode-block" id="CodeGen.new_testbench_lines">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_lines">[docs]</a>
+    <span class="k">def</span> <span class="nf">new_testbench_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        New Testbench as lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">new_testbench</span><span class="p">(</span><span class="n">test_cases</span><span class="p">)</span><span class="o">.</span><span class="n">to_lines</span><span class="p">()</span></div>
 
-<div class="viewcode-block" id="CodeGen.new_testbench_str"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_str">[docs]</a>    <span class="k">def</span> <span class="nf">new_testbench_str</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
+
+<div class="viewcode-block" id="CodeGen.new_testbench_str">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.new_testbench_str">[docs]</a>
+    <span class="k">def</span> <span class="nf">new_testbench_str</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">test_cases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="nb">str</span><span class="p">]]):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        New testbench as str</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">new_testbench_lines</span><span class="p">(</span><span class="n">test_cases</span><span class="p">))</span></div></div>
+        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">new_testbench_lines</span><span class="p">(</span><span class="n">test_cases</span><span class="p">))</span></div>
+</div>
 
 
-<div class="viewcode-block" id="CaseBuilder"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder">[docs]</a><span class="k">class</span> <span class="nc">CaseBuilder</span><span class="p">:</span>
+
+<div class="viewcode-block" id="CaseBuilder">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder">[docs]</a>
+<span class="k">class</span> <span class="nc">CaseBuilder</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Creates a case statement for the IR Graph</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -354,7 +374,9 @@
                 <span class="p">)</span>
             <span class="p">)</span>
 
-<div class="viewcode-block" id="CaseBuilder.new_caseitem"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.new_caseitem">[docs]</a>    <span class="k">def</span> <span class="nf">new_caseitem</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">root</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Vertex</span><span class="p">):</span>
+<div class="viewcode-block" id="CaseBuilder.new_caseitem">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.new_caseitem">[docs]</a>
+    <span class="k">def</span> <span class="nf">new_caseitem</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">root</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Vertex</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Creates a new case item with the root&#39;s unique id as identifier</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -363,7 +385,10 @@
 
         <span class="k">return</span> <span class="n">item</span></div>
 
-<div class="viewcode-block" id="CaseBuilder.do_vertex"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.do_vertex">[docs]</a>    <span class="k">def</span> <span class="nf">do_vertex</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">vertex</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Vertex</span><span class="p">):</span>
+
+<div class="viewcode-block" id="CaseBuilder.do_vertex">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.do_vertex">[docs]</a>
+    <span class="k">def</span> <span class="nf">do_vertex</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">vertex</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Vertex</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Processes a node</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -427,7 +452,10 @@
 
         <span class="k">return</span> <span class="n">stmts</span></div>
 
-<div class="viewcode-block" id="CaseBuilder.do_edge"><a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.do_edge">[docs]</a>    <span class="k">def</span> <span class="nf">do_edge</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">edge</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">):</span>
+
+<div class="viewcode-block" id="CaseBuilder.do_edge">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CaseBuilder.do_edge">[docs]</a>
+    <span class="k">def</span> <span class="nf">do_edge</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">edge</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Edge</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Processes a edge</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -441,7 +469,9 @@
                     <span class="bp">self</span><span class="o">.</span><span class="n">context</span><span class="o">.</span><span class="n">state_var</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">(</span><span class="n">edge</span><span class="o">.</span><span class="n">optimal_child</span><span class="o">.</span><span class="n">unique_id</span><span class="p">)</span>
                 <span class="p">)</span>
             <span class="p">]</span>
-        <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">edge</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span></div></div>
+        <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">edge</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span></div>
+</div>
+
 </pre></div>
 
           </div>
@@ -500,7 +530,7 @@
       &copy;2023, Kerry Wang.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.1.2</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.2</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
