--- a/_modules/python2verilog/optimizer/optimizer.html
+++ b/_modules/python2verilog/optimizer/optimizer.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" data-content_root="../../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>python2verilog.optimizer.optimizer &#8212; python2verilog  documentation</title>
     <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=4f649999" />
     <link rel="stylesheet" type="text/css" href="../../../_static/alabaster.css?v=039e1c02" />
-    <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js?v=b3ba4146"></script>
+    <script src="../../../_static/documentation_options.js?v=5929fcd5"></script>
     <script src="../../../_static/doctools.js?v=888ff710"></script>
-    <script src="../../../_static/sphinx_highlight.js?v=4825356b"></script>
+    <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
    
@@ -42,11 +42,13 @@
 <span class="kn">from</span> <span class="nn">..</span> <span class="kn">import</span> <span class="n">ir</span>
 
 
-<div class="viewcode-block" id="is_dependent"><a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.is_dependent">[docs]</a><span class="k">def</span> <span class="nf">is_dependent</span><span class="p">(</span><span class="n">expr</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">var</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
+<div class="viewcode-block" id="is_dependent">
+<a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.is_dependent">[docs]</a>
+<span class="k">def</span> <span class="nf">is_dependent</span><span class="p">(</span><span class="n">expr</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">var</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Returns whether or not expr is dependent on var</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">InputVar</span><span class="p">):</span>
+    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">):</span>
         <span class="k">return</span> <span class="n">var</span> <span class="o">==</span> <span class="n">expr</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span>
     <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">BinOp</span><span class="p">):</span>
         <span class="k">return</span> <span class="n">is_dependent</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">left</span><span class="p">,</span> <span class="n">var</span><span class="p">)</span> <span class="ow">or</span> <span class="n">is_dependent</span><span class="p">(</span><span class="n">expr</span><span class="o">.</span><span class="n">right</span><span class="p">,</span> <span class="n">var</span><span class="p">)</span>
@@ -55,12 +57,15 @@
     <span class="k">raise</span> <span class="ne">TypeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;unexpected </span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">expr</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="backwards_replace"><a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.backwards_replace">[docs]</a><span class="k">def</span> <span class="nf">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">]):</span>
+
+<div class="viewcode-block" id="backwards_replace">
+<a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.backwards_replace">[docs]</a>
+<span class="k">def</span> <span class="nf">backwards_replace</span><span class="p">(</span><span class="n">expr</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">]):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Replaces instances of variables with the mapped value</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">expr</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">expr</span><span class="p">)</span>
-    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">InputVar</span><span class="p">):</span>
+    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">expr</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Var</span><span class="p">):</span>
         <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">mapping</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">key</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span> <span class="o">==</span> <span class="n">expr</span><span class="o">.</span><span class="n">to_string</span><span class="p">():</span>
                 <span class="k">return</span> <span class="n">mapping</span><span class="p">[</span><span class="n">key</span><span class="p">]</span>
@@ -80,7 +85,10 @@
     <span class="k">return</span> <span class="n">expr</span></div>
 
 
-<div class="viewcode-block" id="graph_apply_mapping"><a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.graph_apply_mapping">[docs]</a><span class="k">def</span> <span class="nf">graph_apply_mapping</span><span class="p">(</span>
+
+<div class="viewcode-block" id="graph_apply_mapping">
+<a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.graph_apply_mapping">[docs]</a>
+<span class="k">def</span> <span class="nf">graph_apply_mapping</span><span class="p">(</span>
     <span class="n">node</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">AssignNode</span><span class="p">,</span> <span class="n">mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">]</span>
 <span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
@@ -97,7 +105,10 @@
     <span class="k">return</span> <span class="n">node</span></div>
 
 
-<div class="viewcode-block" id="graph_update_mapping"><a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.graph_update_mapping">[docs]</a><span class="k">def</span> <span class="nf">graph_update_mapping</span><span class="p">(</span>
+
+<div class="viewcode-block" id="graph_update_mapping">
+<a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.graph_update_mapping">[docs]</a>
+<span class="k">def</span> <span class="nf">graph_update_mapping</span><span class="p">(</span>
     <span class="n">stmt</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Statement</span><span class="p">,</span> <span class="n">old_mapping</span><span class="p">:</span> <span class="nb">dict</span><span class="p">[</span><span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">]</span>
 <span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
@@ -112,7 +123,10 @@
     <span class="k">return</span> <span class="n">new_mapping</span></div>
 
 
-<div class="viewcode-block" id="OptimizeGraph"><a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph">[docs]</a><span class="k">class</span> <span class="nc">OptimizeGraph</span><span class="p">:</span>
+
+<div class="viewcode-block" id="OptimizeGraph">
+<a class="viewcode-back" href="../../../python2verilog.optimizer.html#python2verilog.optimizer.optimizer.OptimizeGraph">[docs]</a>
+<span class="k">class</span> <span class="nc">OptimizeGraph</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    A closure for the graph optimizer</span>
 
@@ -328,6 +342,7 @@
             <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">()</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">RuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">type</span><span class="p">(</span><span class="n">root</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span></div>
+
 </pre></div>
 
           </div>
@@ -386,7 +401,7 @@
       &copy;2023, Kerry Wang.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.1.2</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.2</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
