--- a/_modules/python2verilog/utils/string.html
+++ b/_modules/python2verilog/utils/string.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" data-content_root="../../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>python2verilog.utils.string &#8212; python2verilog  documentation</title>
     <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=4f649999" />
     <link rel="stylesheet" type="text/css" href="../../../_static/alabaster.css?v=039e1c02" />
-    <script data-url_root="../../../" id="documentation_options" src="../../../_static/documentation_options.js?v=b3ba4146"></script>
+    <script src="../../../_static/documentation_options.js?v=5929fcd5"></script>
     <script src="../../../_static/doctools.js?v=888ff710"></script>
-    <script src="../../../_static/sphinx_highlight.js?v=4825356b"></script>
+    <script src="../../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
    
@@ -34,17 +34,22 @@
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">annotations</span>
 
 
-<div class="viewcode-block" id="Lines"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines">[docs]</a><span class="k">class</span> <span class="nc">Lines</span><span class="p">:</span>
+<div class="viewcode-block" id="Lines">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines">[docs]</a>
+<span class="k">class</span> <span class="nc">Lines</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    A list of str that can be serialized to string with provided indents</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-<div class="viewcode-block" id="Lines.assert_no_newline"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.assert_no_newline">[docs]</a>    <span class="nd">@staticmethod</span>
+<div class="viewcode-block" id="Lines.assert_no_newline">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.assert_no_newline">[docs]</a>
+    <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">assert_no_newline</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Asserts no newline character in string</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">assert</span> <span class="n">string</span><span class="o">.</span><span class="n">find</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span><span class="p">)</span> <span class="o">==</span> <span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="s2">&quot;Newline in Lines: &quot;</span> <span class="o">+</span> <span class="n">string</span></div>
+
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">data</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">|</span> <span class="nb">str</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">data</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -84,14 +89,19 @@
     <span class="k">def</span> <span class="fm">__rshift__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">indent</span><span class="p">(</span><span class="n">indent</span><span class="p">)</span>
 
-<div class="viewcode-block" id="Lines.indent"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.indent">[docs]</a>    <span class="k">def</span> <span class="nf">indent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent_amount</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
+<div class="viewcode-block" id="Lines.indent">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.indent">[docs]</a>
+    <span class="k">def</span> <span class="nf">indent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent_amount</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Indent all lines by amount</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">lines</span> <span class="o">=</span> <span class="p">[</span><span class="n">Indent</span><span class="p">(</span><span class="n">indent_amount</span><span class="p">)</span> <span class="o">+</span> <span class="n">line</span> <span class="k">for</span> <span class="n">line</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">lines</span><span class="p">]</span>
         <span class="k">return</span> <span class="bp">self</span></div>
 
-<div class="viewcode-block" id="Lines.to_string"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.to_string">[docs]</a>    <span class="k">def</span> <span class="nf">to_string</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Lines.to_string">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.to_string">[docs]</a>
+    <span class="k">def</span> <span class="nf">to_string</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Converts all lines into a string with lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -100,7 +110,10 @@
             <span class="n">output</span> <span class="o">+=</span> <span class="n">Indent</span><span class="p">(</span><span class="n">indent</span><span class="p">)</span> <span class="o">+</span> <span class="n">buffer</span> <span class="o">+</span> <span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span>
         <span class="k">return</span> <span class="n">output</span></div>
 
-<div class="viewcode-block" id="Lines.add"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.add">[docs]</a>    <span class="k">def</span> <span class="nf">add</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Lines.add">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.add">[docs]</a>
+    <span class="k">def</span> <span class="nf">add</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Adds a new line</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -109,7 +122,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">other</span><span class="p">)</span>
         <span class="k">return</span> <span class="bp">self</span></div>
 
-<div class="viewcode-block" id="Lines.concat"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.concat">[docs]</a>    <span class="k">def</span> <span class="nf">concat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other</span><span class="p">:</span> <span class="n">Lines</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">):</span>
+
+<div class="viewcode-block" id="Lines.concat">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.concat">[docs]</a>
+    <span class="k">def</span> <span class="nf">concat</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other</span><span class="p">:</span> <span class="n">Lines</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Concats two Lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -118,7 +134,10 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">lines</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Indent</span><span class="p">(</span><span class="n">indent</span><span class="p">)</span> <span class="o">+</span> <span class="n">line</span><span class="p">)</span>
         <span class="k">return</span> <span class="bp">self</span></div>
 
-<div class="viewcode-block" id="Lines.nestify"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.nestify">[docs]</a>    <span class="nd">@staticmethod</span>
+
+<div class="viewcode-block" id="Lines.nestify">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Lines.nestify">[docs]</a>
+    <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">nestify</span><span class="p">(</span><span class="n">buffers</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">[</span><span class="n">Lines</span><span class="p">,</span> <span class="n">Lines</span><span class="p">]],</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        pair[0][0]</span>
@@ -138,21 +157,28 @@
             <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">buffer</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">indent</span> <span class="o">+</span> <span class="n">i</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">buffer</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="n">buffers</span><span class="p">)):</span>
             <span class="n">lines</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">buffer</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span> <span class="n">indent</span> <span class="o">+</span> <span class="nb">len</span><span class="p">(</span><span class="n">buffers</span><span class="p">)</span> <span class="o">-</span> <span class="n">i</span> <span class="o">-</span> <span class="mi">1</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">lines</span></div></div>
+        <span class="k">return</span> <span class="n">lines</span></div>
+</div>
 
 
-<div class="viewcode-block" id="Indent"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Indent">[docs]</a><span class="k">class</span> <span class="nc">Indent</span><span class="p">:</span>
+
+<div class="viewcode-block" id="Indent">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Indent">[docs]</a>
+<span class="k">class</span> <span class="nc">Indent</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Creates str instances of indentation</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="n">indentor</span> <span class="o">=</span> <span class="s2">&quot; &quot;</span> <span class="o">*</span> <span class="mi">4</span>
 
-<div class="viewcode-block" id="Indent.indentify"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Indent.indentify">[docs]</a>    <span class="k">def</span> <span class="nf">indentify</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
+<div class="viewcode-block" id="Indent.indentify">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.Indent.indentify">[docs]</a>
+    <span class="k">def</span> <span class="nf">indentify</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Creates indentation</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">indentor</span> <span class="o">*</span> <span class="n">indent</span></div>
+
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">indent</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">indent</span> <span class="o">=</span> <span class="n">indent</span>
@@ -169,25 +195,35 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">indentify</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">indent</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="ImplementsToLines"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.ImplementsToLines">[docs]</a><span class="k">class</span> <span class="nc">ImplementsToLines</span><span class="p">:</span>
+
+<div class="viewcode-block" id="ImplementsToLines">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.ImplementsToLines">[docs]</a>
+<span class="k">class</span> <span class="nc">ImplementsToLines</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    A base class defining an interface for classes that need to provide a &#39;to_lines&#39; method</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-<div class="viewcode-block" id="ImplementsToLines.to_lines"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.ImplementsToLines.to_lines">[docs]</a>    <span class="k">def</span> <span class="nf">to_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="ImplementsToLines.to_lines">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.ImplementsToLines.to_lines">[docs]</a>
+    <span class="k">def</span> <span class="nf">to_lines</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        To Lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="s2">&quot;Derived class must implement to_lines&quot;</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="ImplementsToLines.to_string"><a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.ImplementsToLines.to_string">[docs]</a>    <span class="k">def</span> <span class="nf">to_string</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="ImplementsToLines.to_string">
+<a class="viewcode-back" href="../../../python2verilog.utils.html#python2verilog.utils.string.ImplementsToLines.to_string">[docs]</a>
+    <span class="k">def</span> <span class="nf">to_string</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        To string</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">to_lines</span><span class="p">())</span></div>
 
+
     <span class="k">def</span> <span class="fm">__str__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">to_string</span><span class="p">()</span></div>
+
 </pre></div>
 
           </div>
@@ -246,7 +282,7 @@
       &copy;2023, Kerry Wang.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.1.2</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.2</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
