--- a/genindex.html
+++ b/genindex.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" data-content_root="./">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index &#8212; python2verilog  documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=4f649999" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=039e1c02" />
-    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js?v=b3ba4146"></script>
+    <script src="_static/documentation_options.js?v=5929fcd5"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
-    <script src="_static/sphinx_highlight.js?v=4825356b"></script>
+    <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
    
@@ -149,9 +149,11 @@
 </li>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph.context">context (Generator2Graph property)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_graph">convert_graph() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.convert">convert() (in module python2verilog.api.api)</a>
 </li>
-      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_graph_debug">convert_graph_debug() (in module python2verilog.api.api)</a>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_file_to_file">convert_file_to_file() (in module python2verilog.api.api)</a>
+</li>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.convert_for_debug">convert_for_debug() (in module python2verilog.api.api)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.create_cytoscape_elements">create_cytoscape_elements() (in module python2verilog.ir.graph)</a>
 </li>
@@ -191,7 +193,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.entry">entry (Context attribute)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.entry_state">entry_state (Context attribute)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Expression">Expression (class in python2verilog.ir.expressions)</a>
 </li>
@@ -211,6 +213,10 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.frontend.html#python2verilog.frontend.generator2ir.Generator2Graph">Generator2Graph (class in python2verilog.frontend.generator2ir)</a>
 </li>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.generics.GenericRepr">GenericRepr (class in python2verilog.utils.generics)</a>
+</li>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.generics.GenericReprAndStr">GenericReprAndStr (class in python2verilog.utils.generics)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.get_all_children">get_all_children() (BasicElement method)</a>
 
       <ul>
@@ -223,10 +229,10 @@
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.get_inline_comment">get_inline_comment() (Statement method)</a>
 </li>
-      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">get_module_lines() (CodeGen method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_lines">get_module_lines() (CodeGen method)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.codegen.CodeGen.get_module_str">get_module_str() (CodeGen method)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Edge.get_name">get_name() (Edge method)</a>
@@ -263,15 +269,13 @@
 </li>
       <li><a href="python2verilog.utils.html#python2verilog.utils.string.Indent.indentify">indentify() (Indent method)</a>
 </li>
-      <li><a href="python2verilog.utils.html#python2verilog.utils.string.Indent.indentor">indentor (Indent attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.string.Indent.indentor">indentor (Indent attribute)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Initial">Initial (class in python2verilog.backend.verilog.ast)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.input_vars">input_vars (Context property)</a>
-</li>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.InputVar">InputVar (class in python2verilog.ir.expressions)</a>
 </li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Instantiation">Instantiation (class in python2verilog.backend.verilog.ast)</a>
 </li>
@@ -347,6 +351,8 @@
 </li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.assertions">python2verilog.utils.assertions</a>
 </li>
+        <li><a href="python2verilog.utils.html#module-python2verilog.utils.generics">python2verilog.utils.generics</a>
+</li>
         <li><a href="python2verilog.utils.html#module-python2verilog.utils.string">python2verilog.utils.string</a>
 </li>
       </ul></li>
@@ -414,9 +420,13 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.api.html#python2verilog.api.api.parse_python">parse_python() (in module python2verilog.api.api)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.PosedgeSyncAlways">PosedgeSyncAlways (class in python2verilog.backend.verilog.ast)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Pow">Pow (class in python2verilog.ir.expressions)</a>
+</li>
+      <li><a href="python2verilog.utils.html#python2verilog.utils.generics.pretty_dict">pretty_dict() (in module python2verilog.utils.generics)</a>
 </li>
       <li>
     python2verilog
@@ -547,6 +557,13 @@
 </li>
       </ul></li>
       <li>
+    python2verilog.utils.generics
+
+      <ul>
+        <li><a href="python2verilog.utils.html#module-python2verilog.utils.generics">module</a>
+</li>
+      </ul></li>
+      <li>
     python2verilog.utils.string
 
       <ul>
@@ -617,6 +634,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Ternary">Ternary (class in python2verilog.ir.expressions)</a>
 </li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.test_cases">test_cases (Context attribute)</a>
+</li>
       <li><a href="python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Always.to_lines">to_lines() (Always method)</a>
 
       <ul>
@@ -649,8 +668,6 @@
 
       <ul>
         <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.BinOp.to_string">(BinOp method)</a>
-</li>
-        <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.to_string">(Context method)</a>
 </li>
         <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Edge.to_string">(Edge method)</a>
 </li>
@@ -701,9 +718,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python2verilog.ir.html#python2verilog.ir.context.Context.valid_signal">valid_signal (Context attribute)</a>
 </li>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.statements.ValidSubsitution">ValidSubsitution (class in python2verilog.ir.statements)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python2verilog.ir.html#python2verilog.ir.statements.ValidSubsitution">ValidSubsitution (class in python2verilog.ir.statements)</a>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.expressions.Var">Var (class in python2verilog.ir.expressions)</a>
 </li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Vertex">Vertex (class in python2verilog.ir.graph)</a>
 </li>
@@ -782,7 +801,7 @@
       &copy;2023, Kerry Wang.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.1.2</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.2</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
